generated/checkers/gen/AllGen-UAF-aec8e6bf839101784f3ef037dcdb9432c3f32343/build_logs/syntax-repair-02/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::markFieldReleased(const clang::Expr*, llvm::StringRef, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:155:23: error: ‘class clang::ento::SValBuilder’ has no member named ‘getLValue’; did you mean ‘getMinValue’?
  155 |   SVal FieldLoc = SVB.getLValue(TargetFD, BL);
      |                       ^~~~~~~~~
      |                       getMinValue
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkEndFunction(const clang::ReturnStmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:257:65: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::LocationContext*> >::lookup_type’ {aka ‘const clang::LocationContext* const*’} to ‘const clang::LocationContext*’ in initialization
  257 |       const LocationContext *Owner = State->get<ReleaseOwnerMap>(R);
      |                                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
      |                                                                 |
      |                                                                 clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::LocationContext*> >::lookup_type {aka const clang::LocationContext* const*}
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
